# questionnaire

./: .gitignore  Dockerfile  README.md  composer.json  create.sql  docker-compose.yml
lib/blind/: Cargo.toml  Makefile
lib/blind/src/: lib.rs
lib/sign/: Cargo.toml  test.sh
lib/sign/src/: main.rs
lib/signature/: Cargo.toml
lib/signature/src/: lib.rs
public/: index.html  index.php
public/api/: add_questionnaire.php  answer.php  index.php  question.php  questionnaire.php  result.php  sign.php
public/api/answers/: create.php  show.php
public/api/forms/: .rnd  create.php  show.php
public/api/questionnaires/: create.php  show.php
public/static/css/: main.css
public/static/js/: analysis.js  axios.js  firebase.js  signature.js
public/static/js/components/: add_questionnaire.js  analysis.js  auth.js  questionnaire.js  result.js  route.js
public/static/js/components/answers/: create.js  show.js
public/static/js/components/form/: create.js
public/static/js/components/questionaires/: create.js
src/: auth.php  db.php  dependencies.php  routes.php  settings.php
templates/: index.php
