[package]
name = "signature"
version = "0.1.0"
authors = ["akakou <akakou571@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
rsa-fdh = "0.4.0"
rsa = "0.3.0"
sha2 = "0.9.0"
base64 = "0.12.2"
serde = { version = "1.0.113", features = ["derive"] }
serde_json = "1.0"
